# xoanime_old

./: .env  .gitignore  manage.py  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
api/: .env  .prettierignore  README.md  index.ts  package.json  response_schema.MD  tsconfig.json
api/routes/anilist/: index.ts
api/routes/gogoanime/: index.ts
api/routes/mangadex/: index.ts
api/routes/myanimelist/: index.ts
api/utils/: cache.ts
apps/accounts/: urls.py  validators.py  views.py
apps/core/: middleware.py  urls.py  views.py
apps/core/templatetags/: helpers.py  xoanime.py
base/: urls.py
base/settings/: authentication.py  base.py  configuration.py  development.py  production.py
staticfiles/: manifest.json
staticfiles/scripts/: app.js  player.js  reader.js  sw.js
staticfiles/styles/: base.css
templates/: details.html  popular.html  read.html  recent.html  search.html  top.html  trending.html  watch.html  watch_episode.html
templates/account/: account_inactive.html  email_confirm.html  home.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  signup.html  signup_closed.html
templates/base/: base.html
templates_backup/: details.html  index.html  recent.html  search.html  top.html  trending.html  watch.html  watch_episode.html
templates_backup/account/: email.html  email_change.html  login.html  verification_sent.html  verified_email_required.html
templates_backup/base/: base.html
(+30 files in other folders)
